Added some figures, changed some styling and changed page's name

--- a/_includes/Introduction.html
+++ b/_includes/Introduction.html
@@ -16,4 +16,13 @@
     https://www.opendata.dk/city-of-copenhagen/parkeringstaellinger and car
     ownership can be found at [SOURCE].
   </p>
+
+
+  All the district in Copenhagen can be seen in the map below. Notice that Frederiksberg is not part of the city of Copenhagen, but it is surrounded by the city. 
+  <div class="map-container">
+    <iframe
+      src="../assets/figures/CPH Districts.html"
+      class="iframe"
+    ></iframe>
+  </div>
 </div>
