--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,7 +108,13 @@
     {{ content }}
 
     <footer>
-        View the complete code on GitHub and explore the notebook used for making the plots here. © 2025
+        <p>
+            View the complete code on 
+            <a href="https://github.com/AleksandarLukic96/aleksandarlukic96.github.io" target="_blank">GitHub</a> 
+            and explore the notebook used for making the plots 
+            <a href="https://github.com/AleksandarLukic96/02806_Social_Data/blob/main/notebooks/A2.ipynb" target="_blank">here</a>.
+        </p>
+        <p>&copy; 2025 </p>
     </footer>
 </body>
 
