--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,10 +51,10 @@
         }
 
         .header {
-            background: url('/assets/images/header.jpg') center/cover no-repeat;
-            padding: 80px 20px;
+            background: url('/assets/images/header.jpg') center bottom/cover no-repeat;
+            padding: 140px 20px;
             color: white;
-            font-size: 2.5em;
+            font-size: 3.5em;
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
         }
