--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,8 @@
         }
 
         .header {
-            background: url('/assets/images/header.jpg') center bottom/cover no-repeat;
-            padding: 140px 20px;
+            background: url('/assets/images/header.jpg') center/cover no-repeat;
+            padding: 100px 20px;
             color: white;
             font-size: 3.5em;
             font-weight: bold;
