Some better narrative in terms of tabs

--- a/_includes/Parking.html
+++ b/_includes/Parking.html
@@ -7,4 +7,15 @@
 
   It's interesting to see how the fluctuations. The spike in XX could be due
   to...
+
+  Every parking space in Copenhagen is registered and is visualised on the next figure.
+  <div class="plot-container">
+    <img
+      src="../assets/figures/Parking Spots.png"
+      alt="Parking Spaces"
+      class="iframe"
+    ></img>
+  </div>
+
+  Of course, we do not suggest using this figure to try and find a parking spot in Copenhagen. There are much more appropriate tools for that, such as the app EasyPark or the government website <a href="https://kbhkort.kk.dk/spatialmap?" target="_blank">kbhkort.kk.dk</a>.
 </div>
