Made the page size dynamic to screen size. 55%

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
             padding: 30px;
             border: 1px solid #ccc;
             border-top: none;
-            max-width: 800px;
+            max-width: 55%;
             margin: auto;
             background: white;
         }
