--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ site.title | default: "Parking in Copenhagen" }}</title>
+    <link rel="icon" type="image/png" href="{{ '/assets/favicon.png' | relative_url }}">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -133,6 +134,10 @@
             <a href="https://github.com/AleksandarLukic96/02806_Social_Data/blob/main/notebooks/A2.ipynb" target="_blank">here</a>.
         </p>
         <p>&copy; 2025 </p>
+
+        <p>Icon by <a class="link_pro"
+            href="https://freeicons.io/airport-icon-set-6/car-lot-park-parking-roadsign-vehicle-icon-459463">Chanut is
+            Industries</a> on <a href="https://freeicons.io">freeicons.io</a></p>
     </footer>
 </body>
 
