--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
         }
 
         .header {
-            background: url('/assets/images/header2.jpg') center bottom/cover no-repeat;
+            background: url('/assets/images/header2.png') center bottom/cover no-repeat;
             padding: 100px 20px;
             color: white;
             font-size: 3.5em;
