--- a/_includes/AreParkingSpotsDisappearing.html
+++ b/_includes/AreParkingSpotsDisappearing.html
@@ -2,35 +2,57 @@
   <h2>Are Parking Spots Disappearing?</h2>
   <p>
     Is something rotten in the state of Copenhagen, when it comes to car parking spots?
-    Well, it is not such an easy question to answer. The number of parking spots in the city has been fluctuating over the years and as some spots dissapear, others are created.
-
-    If you were interested, these are [NUMBER] of the current registered parking spots in Copenhagen.
-
-    <div class="plot-container">
-      <img src="../assets/figures/Parking Spots.png" alt="Parking Spaces" class="iframe"></img>
-    </div>
-    
-    Of course, we do not suggest using this figure to try and find a parking spot in Copenhagen. There are much more
-    appropriate tools for that, such as the app EasyPark or the government website <a
-      href="https://kbhkort.kk.dk/spatialmap?" target="_blank">kbhkort.kk.dk</a>.
-
-    So, since this map isn't really helping, let's try something else. 
-    
-    Perhaps the reason parking seems to be so difficult to find is that the parking spaces are actually being moved around.
-    Every year, parking spaces are being changed and drivers might find it difficult to figure out where parking can now be found of if they can even use a said parking space. [SOURCES]
-    
-    There are multiple reasons for this, but one of the more important ones is <strong>the rise of electric cars.</strong>
-    People are starting to buy more and more electric cars, which is also because of Danish government incentivising this. Not just by making it less expensive to invest in electric cars, but also by increasingly reserving parking spots for electric cars and converting parking spots into charging spots. 
-    To be more precise, the number of electric cars have been increasing as shown in the following figure.
-
-    <div class="plot-container">
-      <img src="../assets/figures/car ownership time series.png" alt="Electric Cars" class="iframe"></img>
-
-    Notice how electric cars are the only cars that have been steadily increasing in the last four years. 
-
-    Another reason is the centralisation and privitasation of parking spaces. Over the last 20 years, multiple parking buildings have been constructed in Copenhagen. [SOURCES]. While this has increased the overall number of parking spaces, a lot of parking spaces on street level has been removed [SOURCE] which leads to the feeling that there is no parking (unless you pay for it).
-
+    Well, it is not such an easy question to answer. The number of parking spots in the city has been fluctuating over the
+    years and as some spots disappear, others are created.
   </p>
+  
+  <p>
+    If you were interested, these are [NUMBER] of the current registered parking spots in Copenhagen.
+  </p>
+  
+  <div class="plot-container">
+    <img src="../assets/figures/Parking Spots.png" alt="Parking Spaces" class="iframe" />
+  </div>
+  
+  <p>
+    Of course, we do not suggest using this figure to try and find a parking spot in Copenhagen. There are much more
+    appropriate tools for that, such as the app EasyPark or the government website
+    <a href="https://kbhkort.kk.dk/spatialmap?" target="_blank">kbhkort.kk.dk</a>.
+  </p>
+  
+  <p>
+    So, since this map isn't really helping, let's try something else.
+  </p>
+  
+  <p>
+    Perhaps the reason parking seems to be so difficult to find is that the parking spaces are actually being moved
+    around. Every year, parking spaces are being changed and drivers might find it difficult to figure out where parking
+    can now be found or if they can even use a said parking space. [SOURCES]
+  </p>
+  
+  <p>
+    There are multiple reasons for this, but one of the more important ones is <strong>the rise of electric cars.</strong>
+    People are starting to buy more and more electric cars, which is also because of Danish government incentivising this.
+    Not just by making it less expensive to invest in electric cars, but also by increasingly reserving parking spots for
+    electric cars and converting parking spots into charging spots.
+    To be more precise, the number of electric cars have been increasing as shown in the following figure.
+  </p>
+  
+  <div class="plot-container">
+    <img src="../assets/figures/car ownership time series.png" alt="Electric Cars" class="iframe" />
+  </div>
+  
+  <p>
+    Notice how electric cars are the only cars that have been steadily increasing in the last four years.
+  </p>
+  
+  <p>
+    Another reason is the centralisation and privatisation of parking spaces. Over the last 20 years, multiple parking
+    buildings have been constructed in Copenhagen. [SOURCES]. While this has increased the overall number of parking
+    spaces, a lot of parking spaces on street level have been removed [SOURCE], which leads to the feeling that there is
+    no parking (unless you pay for it).
+  </p>
+
 
 
 </div>
