--- a/_includes/Parking.html
+++ b/_includes/Parking.html
@@ -21,9 +21,9 @@
       <iframe src="../assets/figures/interactive_occupancy_plot.html" class="iframe"></iframe>
     </div>
     
-    Looking at this, the problem is obviously a bit nuanced. Some districts (like Valby) have low occupancy, but that is not going to help you if you ar elooking for a parking spot at Vesterbro in the evening.
+    Looking at this, the problem is obviously a bit nuanced. Some districts (like Valby) have low occupancy, but that is not going to help you if you are looking for a parking spot at Vesterbro in the evening.
     But even at Vesterbro, there should be some parking available, so what could result in people not being able to find parking?
-    In the next slide we will take a look at why available parking does not neccesarily mean that it is easy to find parking.
+    In the next tab we will take a look at why available parking does not neccesarily mean that it is easy to find parking.
     
   </p>
 </div>
