--- a/_includes/AreParkingSpotsDisappearing.html
+++ b/_includes/AreParkingSpotsDisappearing.html
@@ -7,7 +7,7 @@
   </p>
   
   <p>
-    If you were interested, these are [NUMBER] of the current registered parking spots in Copenhagen.
+    If you were interested, these are the [NUMBER] current registered parking spots in Copenhagen.
   </p>
   
   <div class="plot-container">
@@ -26,9 +26,11 @@
   
   <p>
     Perhaps the reason parking seems to be so difficult to find is that the parking spaces are actually being moved
-    around. Every year, parking spaces are being changed and drivers might find it difficult to figure out where parking
-    can now be found or if they can even use a said parking space. [SOURCES]
+    around or changed. Every year, parking spaces are being changed and drivers might find it difficult to figure out where parking
+    can now be found or if they can even use said parking space. [SOURCES]. What can be seen on the next figure, is the amount of parking spaces that have been changed in a given year in Copenhagen. No wonder people are confused. 
   </p>
+
+
   
   <p>
     There are multiple reasons for this, but one of the more important ones is <strong>the rise of electric cars.</strong>
@@ -50,9 +52,11 @@
     Another reason is the centralisation and privatisation of parking spaces. Over the last 20 years, multiple parking
     buildings have been constructed in Copenhagen. [SOURCES]. While this has increased the overall number of parking
     spaces, a lot of parking spaces on street level have been removed [SOURCE], which leads to the feeling that there is
-    no parking (unless you pay for it).
+    no apparent parking.
   </p>
 
-
+  <p>
+    
+  </p>
 
 </div>
