Added map + total parking spaces, updated text

--- a/_includes/AreParkingSpotsDisappearing.html
+++ b/_includes/AreParkingSpotsDisappearing.html
@@ -3,11 +3,11 @@
   <p>
     Is something rotten in the state of Copenhagen, when it comes to car parking spots?
     Well, it is not such an easy question to answer. The number of parking spots in the city has been fluctuating over the
-    years and as some spots disappear, others are created.
+    years and as new spots are created, old ones simply to simply vanish.
   </p>
   
   <p>
-    If you were interested, these are the [NUMBER] current registered parking spots in Copenhagen.
+    If you were interested, these are the more than 120000 currently registered parking spots in Copenhagen.
   </p>
   
   <div class="plot-container">
@@ -27,17 +27,17 @@
   <p>
     Perhaps the reason parking seems to be so difficult to find is that the parking spaces are actually being moved
     around or changed. Every year, parking spaces are being changed and drivers might find it difficult to figure out where parking
-    can now be found or if they can even use said parking space. [SOURCES]. What can be seen on the next figure, is the amount of parking spaces that have been changed in a given year in Copenhagen. No wonder people are confused. 
+    can now be found or if they can even use said parking space. [SOURCES]. What can be seen on the next figure, is the amount of parking spaces that have had restrictions added to it in a given year in Copenhagen. No wonder people are confused. 
   </p>
 
-
+  [INSERT PLOT]
   
   <p>
-    There are multiple reasons for this, but one of the more important ones is <strong>the rise of electric cars.</strong>
-    People are starting to buy more and more electric cars, which is also because of Danish government incentivising this.
-    Not just by making it less expensive to invest in electric cars, but also by increasingly reserving parking spots for
+    There are multiple reasons for this, but one of the more important ones is <strong>the rise of electric cars</strong>.
+    While people are starting to buy more and more electric cars, the Danish government is trying to increase this trend further by incentivising it through changing in the infrastructure.
+    Not just by making it less expensive to invest in electric cars [SOURCE], but also by increasingly reserving parking spots for
     electric cars and converting parking spots into charging spots.
-    To be more precise, the number of electric cars have been increasing as shown in the following figure.
+    To be more precise, the number of electric cars have been increasing as shown in the following figure. Notice how electric cars are the only cars that have been steadily increasing in the last four years.
   </p>
   
   <div class="plot-container">
@@ -45,14 +45,10 @@
   </div>
   
   <p>
-    Notice how electric cars are the only cars that have been steadily increasing in the last four years.
-  </p>
-  
-  <p>
-    Another reason is the centralisation and privatisation of parking spaces. Over the last 20 years, multiple parking
+    Another reason that parking spots can be difficult to find in inner-Copenhagen is the centralisation and privatisation of parking spaces. Over the last 20 years, multiple parking
     buildings have been constructed in Copenhagen. [SOURCES]. While this has increased the overall number of parking
     spaces, a lot of parking spaces on street level have been removed [SOURCE], which leads to the feeling that there is
-    no apparent parking.
+    no apparent parking. The parking houses are not reflected in the datasets we are using. 
   </p>
 
   <p>
