--- a/_includes/CityOverview.html
+++ b/_includes/CityOverview.html
@@ -1,5 +1,12 @@
 <div id="tab5" class="tab-content">
     <h2>City Overview</h2>
     <p>
+        For a deeper insight into the individual districts and their parking situations, consider the following map.
+        Howver or select the different districts to explore and compare the parking spaces and their occupancy rates across different areas of Copenhagen.
+        The map provides a comprehensive overview of the parking landscape, allowing you to zoom in on specific districts and analyze their parking dynamics and reflects the 2025 state of parking. 
     <p>
+    
+        <div class="map-container">
+            <iframe src="../assets/figures/CPH_folium_map.html" class="iframe"></iframe>
+        </div>
 </div>
