--- a/_includes/Introduction.html
+++ b/_includes/Introduction.html
@@ -12,9 +12,7 @@
     spaces. [SOURCE] To explore the parking habits of inhabitants in Copenhagen,
     we will look at the parking spaces available in the city, the number of cars
     registered in the city and try to show and explain the evolution of parking
-    in the city over the years. The data for parking can be at
-    https://www.opendata.dk/city-of-copenhagen/parkeringstaellinger and car
-    ownership can be found at [SOURCE].
+    in the city over the years. The data for parking can be at <a href="https://www.opendata.dk/city-of-copenhagen/parkeringstaellinger" target="_blank">opendata.dk</a> and car ownership can be found at [SOURCE].
   </p>
 
 
