--- a/_includes/Parking.html
+++ b/_includes/Parking.html
@@ -2,13 +2,13 @@
   <h2>Parking</h2>
   <p>
     Before diving into why parking seems to be difficult to find in Copenhagen, we should first ascertain whether parking opportunities have actually been diminishing. 
-    The idea is simple: if the the number of parking spaces are decreasing, parking should be harder to get. So, let's looks at a simple bar graph of new parking spaces in Copenhagen over the years.
+    The idea is simple: if the the number of parking spaces are decreasing, parking should be harder to get. So, let's looks at a simple graph of total street parking spaces in Copenhagen over the years.
     
     <div class="plot-container">
-      <img src="../assets/figures/new parking from 2008.png" alt="New Parking Spaces" class="iframe"></img>
+      <img src="../assets/figures/Parking Spaces.png" alt="New Parking Spaces" class="iframe"></img>
     </div>
     
-    From this figure, it seems like there should be more parking. However, it does not say anything about how many parking spaces are dissappearing. In addition, just the existance of more parking does not mean it's easier to find parking as they could easily be filled by an increasing number of cars. So, instead let's investigate the mean occupancy - meaning the percentage of used parking at a given street in the city.  
+    From this figure, it seems like there should be <em>more</em> parking. However, for several reaons, simply having more parking spaces does not neccesarily mean that it is easier to find parking. Maybe, the increase in parking spaces is not keeping up with the increase in cars. So, instead let's investigate the <em>mean occupancy</em> - meaning the percentage of used parking at a given street in the city.  
     
     <div class="plot-container">
       <img src="../assets/figures/mean occupancy bar.png" alt="Bar Occupancy" class="iframe"></img>
