--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,21 +61,26 @@
         }
 
         #tabs {
-            margin-top: 20px;
+            display: flex;
+            max-width: 55%;
+            margin: auto;
+            border-bottom: 2px solid #ccc;
+            padding-top: 1%;
         }
 
         .tab {
-            display: inline-block;
-            padding: 12px 24px;
-            background-color: #e0e0e0;
+            flex: 1; 
+            text-align: center;
+            padding: 12px 0;
+            background-color: #e1bcba;;
             border-radius: 8px 8px 0 0;
-            margin: 0 5px;
             cursor: pointer;
             transition: background-color 0.3s;
+            font-size: clamp(0.8rem, 1.5vw, 1.2rem);
         }
 
         .tab:hover, .tab.active {
-            background-color: #c0c0c0;
+            background-color: rgba(255, 204, 0, 0.3);
         }
 
         .tab-content {
