Left align text

--- a/_includes/Parking.html
+++ b/_includes/Parking.html
@@ -2,7 +2,7 @@
   <h2>Parking</h2>
   <p>
     Before diving into why parking seems to be difficult to find in Copenhagen, we should first ascertain whether parking opportunities have actually been diminishing. 
-    The idea is simple: if the the number of parking spaces are decreasing, parking should be harder to get. So, let's looks at a simple graph of total street parking spaces in Copenhagen over the years.
+    The idea is simple: <strong>if the the number of parking spaces are decreasing, parking should be harder to find</strong>. <br> So, let's looks at a simple graph of total street parking spaces in Copenhagen over the years.
     
     <div class="plot-container">
       <img src="../assets/figures/Parking Spaces.png" alt="New Parking Spaces" class="iframe"></img>
