--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            text-align: center;
+            text-align: left;
             background-color: #f9f9f9;
             color: #333;
             font-size: clamp(1rem, 2vw, 1.4rem); /* Dynamically sizes text */
