Footer/header align center, minimum size html

--- a/_includes/CityOverview.html
+++ b/_includes/CityOverview.html
@@ -7,6 +7,7 @@
     <p>
     
         <div class="map-container">
-            <iframe src="../assets/figures/CPH_folium_map.html" class="iframe"></iframe>
+            <iframe src="../assets/figures/CPH_folium_map.html" class="iframe"
+            style="min-height: 650px;"></iframe>
         </div>
 </div>
