--- a/_includes/Introduction.html
+++ b/_includes/Introduction.html
@@ -21,6 +21,7 @@
     <iframe
       src="../assets/figures/CPH Districts.html"
       class="iframe"
+      style="min-height: 600px;"
     ></iframe>
   </div>
 </div>
