--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
             font-size: 3.5em;
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+            text-align: center;
         }
 
         #tabs {
@@ -70,24 +71,51 @@
             padding: 20px;
             font-size: 0.9em;
             color: #777;
+            text-align: center;
         }
 
         .map-container,
         .plot-container {
-            min-width: 500px;
             margin: 20px auto;
             padding: 20px;
             background-color: white;
             border: 1px solid #ccc;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            max-width: 100%;
+            height: auto;
+            width: auto;
+            display: block;
+            border-radius: 8px;
         }
 
         .iframe {
             width: 100%;
             height: 100%;
-            min-height: 600px;
             border: none; 
             display: block;
+        }
+
+        /* HTML iframe extension with min heigh 400px */
+        .iframe.html {
+            min-height: 400px; /* Minimum height for the iframe */
+        }
+
+        .figure-text-container {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 30px; /* spacing between text and image */
+          max-width: 90%;
+          margin: auto;
+          flex-wrap: wrap; /* allows stacking on small screens */
+        }
+
+        .text-block {
+          flex: 1;
+          min-width: 250px;
+          max-width: 500px;
+          font-size: 1rem;
+          line-height: 1.6;
         }
     </style>
 </head>
