Text next to figure (img). Next: html

--- a/_includes/Parking.html
+++ b/_includes/Parking.html
@@ -6,13 +6,13 @@
     
   <div class="figure-text-container">
     <div class="text-block">
-      From this figure, it seems like there should be <em>more</em> parking. However, for several reasons, simply having
+      From this figure, it seems like there should be more parking. However, for several reasons, simply having
       more parking spaces does not necessarily mean that it is easier to find parking. Maybe the increase in parking
-      spaces is not keeping up with the increase in cars. So, instead let's investigate the <em>mean occupancy</em> –
+      spaces is not keeping up with the increase in cars. So, instead let's investigate the mean occupancy –
       meaning the percentage of used parking at a given street in the city.
     </div>
 
-    <div class="plot-container">
+    <div class="figure-text-plot">
       <img src="../assets/figures/Parking Spaces.png" alt="New Parking Spaces" class="iframe" />
     </div>
   </div>
