--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,6 +86,7 @@
             width: auto;
             display: block;
             border-radius: 8px;
+            flex-shrink: 1;
         }
 
         .iframe {
@@ -95,28 +96,46 @@
             display: block;
         }
 
-        /* HTML iframe extension with min heigh 400px */
-        .iframe.html {
-            min-height: 400px; /* Minimum height for the iframe */
+        img.iframe {
+          width: 100%;
+          height: auto;
+          display: block;
+          border-radius: 8px;
         }
 
         .figure-text-container {
           display: flex;
-          align-items: center;
+          align-items: stretch;
           justify-content: center;
-          gap: 30px; /* spacing between text and image */
+          gap: 30px;
           max-width: 90%;
           margin: auto;
-          flex-wrap: wrap; /* allows stacking on small screens */
+          flex-wrap: nowrap;
+        }
+
+        .figure-text-plot {
+          flex: 1;
+          max-width: 70%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
 
         .text-block {
           flex: 1;
           min-width: 250px;
-          max-width: 500px;
-          font-size: 1rem;
-          line-height: 1.6;
+          max-width: 30%;
+          display: flex;
+          height: 100%; 
+          align-items: center;     
+            justify-content: center; 
+            height: 100%;           
+            padding: 20px; 
+            padding-top: 5%; 
+            font-size: clamp(0.5rem, 1vw, 1.4rem); /* Dynamically sizes text */
+        
         }
+
     </style>
 </head>
 
