Better images and sources

--- a/_includes/AreParkingSpotsDisappearing.html
+++ b/_includes/AreParkingSpotsDisappearing.html
@@ -11,7 +11,10 @@
   </p>
   
   <div class="plot-container">
-    <img src="../assets/figures/Parking Spots.png" alt="Parking Spaces" class="iframe" />
+    <img src="../assets/figures/Parking Spots.png" alt="Parking Spaces" class="iframe" 
+    style="max-height: 750px; max-width: 750px; place-self: center;"
+
+    />
   </div>
   
   <p>
@@ -27,28 +30,42 @@
   <p>
     Perhaps the reason parking seems to be so difficult to find is that the parking spaces are actually being moved
     around or changed. Every year, parking spaces are being changed and drivers might find it difficult to figure out where parking
-    can now be found or if they can even use said parking space. [SOURCES]. What can be seen on the next figure, is the amount of parking spaces that have had restrictions added to it in a given year in Copenhagen. No wonder people are confused. 
+    can now be found or if they can even use said parking space.
+    What can be seen on the next figure, is the amount of parking spaces that have had restrictions added to it in a given year in Copenhagen. No wonder people are confused. 
   </p>
 
   [INSERT PLOT]
   
   <p>
+    And this is not just something that has been happening the last couple of years. Back in 2017, the city of Copenhagen faced big changes as many parking spaces were being changed from free to paid [<a href="https://nyheder.tv2.dk/lokalt/2017-03-01-se-kortet-her-er-det-nu-slut-med-gratis-parkering-i-koebenhavn"
+      target="_blank">TV2.dk</a>]. This initiative decreased occupancy in the affacted zones by around 30% [<a href="https://www.kk.dk/nyheder/tidsbegraenset-parkering-i-flere-bydele"target="_blank">KK.dk</a>] which technically made it easier to find parking, but harder to find <em>free</em> parking. 
+  </p>
+
+  <p>
     There are multiple reasons for this, but one of the more important ones is <strong>the rise of electric cars</strong>.
     While people are starting to buy more and more electric cars, the Danish government is trying to increase this trend further by incentivising it through changing in the infrastructure.
-    Not just by making it less expensive to invest in electric cars [SOURCE], but also by increasingly reserving parking spots for
-    electric cars and converting parking spots into charging spots.
-    To be more precise, the number of electric cars have been increasing as shown in the following figure. Notice how electric cars are the only cars that have been steadily increasing in the last four years.
+    Not just by making it less expensive to invest in electric cars [<a href="https://greenpowerdenmark.dk/nyheder/groen-aftale-giver-danskerne-billigere-elbiler" target="_blank">Greenpowerdenmark.dk</a>], but also by increasingly reserving parking spots for
+    electric cars and converting parking spots into charging spots [<a href="https://fdm.dk/nyheder/trafik/2021-09-koebenhavn-oeremaerker-5000-p-pladser-til-elbiler-delebiler" target="_blank">FDM.dk</a>]. Additionally, in an effort to discourage the use of high-emission vehicles, Copenhagen significantly increased the cost of residential
+    parking permits for petrol and diesel cars [<a href="https://www.thelocal.dk/20191007/copenhagen-residents-could-pay-100-times-more-for-parking" target="_blank">Thelocal.dk</a>.]
+    All of this, and the general enthousiasm for eletric cars, has resulted in the number of electric cars increasing as shown in the following figure. Notice how electric cars are the only type of car that have been steadily increasing in the last four years.
   </p>
   
   <div class="plot-container">
     <img src="../assets/figures/car ownership time series.png" alt="Electric Cars" class="iframe" />
   </div>
+
+  <p>
+    Seeing as how electric cars are also exempt from time restrictions in the new three-hour zones and can park for free in public municipal parking spaces, one solutions to the parking problem seems to be investing in an electric car. However, this is an expensive, and most likely short-term solution. 
+  </p>
   
   <p>
     Another reason that parking spots can be difficult to find in inner-Copenhagen is the centralisation and privatisation of parking spaces. Over the last 20 years, multiple parking
-    buildings have been constructed in Copenhagen. [SOURCES]. While this has increased the overall number of parking
-    spaces, a lot of parking spaces on street level have been removed [SOURCE], which leads to the feeling that there is
-    no apparent parking. The parking houses are not reflected in the datasets we are using. 
+    buildings have been constructed in Copenhagen. [<a href="https://ebp.dk/en/parking-in-copenhagen/?utm_source=chatgpt.com" target="_blank">dbp.dk,</a> <a href="https://www.visitcopenhagen.dk/koebenhavn/planlaeg-din-tur/parkeringshuse-i-koebenhavn" target="_blank">visitcopenhagen.dk,</a> <a href="https://copark.dk/kaempe-p-hus-aabner-snart-i-hjertet-af-koebenhavn/#:~:text=Fra%20den%201.,parkeringspladser%2C%20der%20udbydes%20til%20beboerne." target="_blank">copark.dk</a>]. While this has increased the overall number of parking
+    spaces, a lot of parking spaces on street level have been removed [<a href="https://via.ritzau.dk/pressemeddelelse/13763116/nedlaeggelsen-af-600-p-pladser-i-byens-hjerte-naermer-sig?publisherId=13560117&lang=da" target="_blank">ritzau.dk</a>], which leads to the feeling that there is
+    no apparent parking.
+  </p>
+  <p>
+    It should again be noted, that our datasets concern street parking, and therefore parking houses are not reflected in the datasets we are using. 
   </p>
 
   <p>
