--- a/_includes/Parking.html
+++ b/_includes/Parking.html
@@ -22,16 +22,18 @@
     </div>
     
     Again, this figure does not show the whole picture. On the surface, it seems like there are always parking available and the occupancy even seems to have decreased the last six years. Still, showing the mean for the whole city can be misleading and is perhaps not the best pointer to finding parking opportunities. Perhaps, if we explored the district individually, we would see patterns in the city. 
-    To explore the mean occupancy for the different districts, use the filter button on the following visualisation. 
     
-    <div class="map-container">
-      <iframe src="../assets/figures/interactive_occupancy_plot.html" class="iframe"
-      style="min-height: 460px;"
-      ></iframe>
-    </div>
+    <div class="figure-text-container">
+      <div class="figure-text-plot">
+        <iframe src="../assets/figures/interactive_occupancy_plot.html" class="iframe" style="min-height: 460px;"></iframe>
+      </div>
+      <div class="text-block">
+        To explore the mean occupancy for the different districts, use the filter button on top-left part of the visualisation.
+      </div>
+      </div>
     
     Looking at this, the problem is obviously a bit nuanced. Some districts (like Valby) have low occupancy, but that is not going to help you if you are looking for a parking spot at Vesterbro in the evening.
-    But even at Vesterbro, there should be some parking available, so what could result in people not being able to find parking?
+    But even at high occupancy areas such as Vesterbro, there seems to be some parking available, so what could result in people not being able to find parking?
     In the next tab we will take a look at why available parking does not neccesarily mean that it is easy to find parking.
     
   </p>
