--- a/_includes/WillItGetBetter.html
+++ b/_includes/WillItGetBetter.html
@@ -1,7 +1,23 @@
 <div id="tab4" class="tab-content">
-  <h2>Will It Get Better?</h2>
+  <h2>Will It Ever Get Better?</h2>
   <p>
-    Maybe.
+    There is no easy answer to this question. The parking situation in Copenhagen is complicated. Not just for the people trying to find parking,
+    but also for the ones responsible for solving the infrastructural problems. Numerous actors are trying in their own way to make getting around the city easier.
   </p>
 
+  <p>
+    In our research we have not touched upon the public transportation which is obviously also a big part of the potential
+    solution. For a moment, consider a Copenhagen where public transportation is so established that private parking becomes
+    irrelivant. Of course that scenario is still well into the future, so until then we recommend planning your trip.
+    Conisder where you are going and if there is likely to be parking there. Use our or others' ressources to predict the
+    occupancy in the area and if the odds are against you: use public transportation.
+
+    The following city overview should help you get a better idea of the parking situation in the city and predict the chances of finding parking.
+
+    <div class="map-container">
+      <iframe src="../assets/figures/CPH_folium_map.html" class="iframe" style="min-height: 650px;"></iframe>
+    </div>
+
+    And if none of this works, buy yourself an eletric car and skip some of the hassle.
+  </p>
 </div>
